# GSoC2025-vhost-user-bsd-macos

./: README.md
gsoc-test/: Cargo.toml
gsoc-test/src/: backend.rs  errno.rs  frontend.rs  sock_ctrl_msg.rs
scripts/linux/: run-vhost-vsock.sh  run-x86.sh
