[package]
name = "gsoc-test"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "frontend"
path = "src/frontend.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"

[dependencies]
vmm-sys-util = "0.14.0"
libc = "1.0.0-alpha.1"
polling = { version = "3.8.0", optional = true }
mio = { version = "1", optional = true, features = ["os-poll", "os-ext"] }

[features]
default = ["tokio"]
smol = ["polling"]
tokio = ["mio"]
